fixing z-index for lower navbar so that upper navbar works, and testing getdatetypes in alpha report table

--- a/src/components/dataTable/css/style.css
+++ b/src/components/dataTable/css/style.css
@@ -37,6 +37,10 @@ th {
 	overflow: auto;
 }
 
+.head {
+	z-index: 0;
+}
+
 .up {
 	background-image:url('../img/asc.png');
 }
